--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
 	"name": "claims",
-	"description": "*",
 	"version": "0.1.0",
-	"keywords": [
-		"claim",
-		"ticket",
-		"identity",
-		"authorization"
-	],
 	"author": {
 		"name": "Michael Trotter",
 		"email": "spicydonuts@gmail.com"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/netsteps/claims.git"
-	},
-	"main": "./index.js",
+	"description": "API client for federated claims-based security, including parsing and validating claims tickets and interacting with claims authorities.",
+	"keywords": [
+		"claim",
+		"claims",
+		"ticket",
+		"identity",
+		"authorization"
+	],
+	"main": "index.js",
 	"directories": {
-		"test": "./test"
+		"example": "examples",
+		"lib": "lib",
+		"test": "test"
+	},
+	"scripts": {
+			"test": "mocha -R spec"
 	},
 	"dependencies": {
-		"node-oops": "~0.1.x",
-		"dbc.js": "~1.0.x",
+		"node-oops": "0.1.x",
+		"dbc.js": "1.0.x",
+		"hooked": "0.1.x",
+		"extend": "1.1.x"
 	},
 	"devDependencies": {
 		"expect.js": "~0.2.x",
 		"mocha": "~1.10.x"
 	},
-	"scripts": {
-		"test": "mocha -R spec"
-	},
-	"readmeFilename": "README.md",
-	"bugs": {
-		"url": "https://github.com/netsteps/claims/issues"
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/netsteps/claims"
 	}
 }
