--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test": "mocha -R spec"
   },
   "dependencies": {
-    "extend": "~1.1.3",
-    "jsonschema": "0.3.x"
+    "jsonschema": "~0.3.x",
+    "connect": "~2.8.4"
   },
   "devDependencies": {
     "expect.js": "~0.2.x",
