--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "jsonschema": "~0.3.x",
-    "connect": "~2.8.4"
+    "connect": "~2.8.4",
+    "opex": "~0.1.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.x",
