created claims_client for expanding claims details

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonschema": "~0.3.x",
     "connect": "~2.8.4",
     "opex": "~0.1.0",
-    "dbc.js": "~1.0.1"
+    "dbc.js": "~1.0.1",
+    "webflow": "git://github.com/spicydonuts/webflow.git"
   },
   "devDependencies": {
     "expect.js": "~0.2.x",
