--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "connect": "~2.8.4",
     "opex": "~0.1.0",
     "dbc.js": "~1.0.1",
-    "webflow": "git://github.com/spicydonuts/webflow.git",
+    "webflow": ">=0.1.2",
+    "http-signature": "0.10.0",
     "extend": "~1.1.3"
   },
   "devDependencies": {
