--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dbc.js": "~1.0.1",
     "webflow": ">=0.1.2",
     "http-signature": "0.10.0",
-    "extend": "~1.1.3"
+    "extend": "~1.1.3",
+    "key-manager": "~0.1.0"
   },
   "devDependencies": {
     "expect.js": "~0.2.x",
